--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "license": "ISC",
   "devDependencies": {
     "backbone": "^1.3.2",
+    "co": "^4.6.0",
+    "koa": "^1.2.0",
+    "koa-router": "^5.4.0",
+    "request-promise": "^3.0.0",
     "underscore": "^1.8.3"
   },
   "dependencies": {
+    "eventemitter3": "^1.2.0",
     "match-json": "^0.1.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Siedrix/record-tape.git"
-  }  
+  }
 }
